--- a/pay/pay.html
+++ b/pay/pay.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<a href="../index.html"><img src="../image/Frame653.png" alt="" /></a>
 				<div class="nav__links">
-					<a href="#">Тарифы</a>
+					<a href="/spreedTest/speed.html">Тарифы</a>
 					<a href="/pay/pay.html">Оплата</a>
 					<a href="../support/support.html">Поддержка</a>
 					<a href="../info/info.html">О компании</a>
