--- a/support/support.html
+++ b/support/support.html
@@ -18,7 +18,7 @@
 					><img src="../image/Frame653.png" alt="logo"
 				/></a>
 				<div class="nav__links">
-					<a href="#">Тарифы</a>
+					<a href="/spreedTest/speed.html">Тарифы</a>
 					<a href="/pay/pay.html">Оплата</a>
 					<a href="/support/support.html">Поддержка</a>
 					<a href="/info/info.html">О компании</a>
