--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<a href="#">Подключить</a>
 						</button>
 						<button class="color__ground">
-							<a href="#">Проверка скорости</a>
+							<a href="/spreedTest/speed.html">Проверка скорости</a>
 						</button>
 					</div>
 				</div>
