--- a/support/support.html
+++ b/support/support.html
@@ -10,6 +10,12 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
 		<header class="nav__menu">
@@ -23,6 +29,13 @@
 					<a href="/support/support.html">Поддержка</a>
 					<a href="/info/info.html">О компании</a>
 				</div>
+				<nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
+					<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
+					  <span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+					</div>
+				  </nav>
 			</div>
 		</header>
 		<section class="support__section">
